--- a/index.html
+++ b/index.html
@@ -9,32 +9,28 @@
 </head>
 
 <body>
-    <header class="section">
-        <div class="theme">
-            <p class="theme-title">Change theme</p>
-            <div class="theme-switcher">
-                <button class="theme-btn">Камень</button>
-                <button class="theme-btn">Барби</button>
-                <button class="theme-btn">Бежевый</button>
-                <button class="theme-btn">Индиго</button>
-            </div>
-        </div>
-        <div class="theme">
-            <p class="theme-title">Change music</p>
-            <div class="theme-switcher">
-                <button class="theme-btn">Релакс</button>
-                <button class="theme-btn">Поп</button>
-                <button class="theme-btn">Классика</button>
-                <button class="theme-btn">Медитация</button>
-            </div>
-        </div>
+    <!-- <header class="section"> -->
 
 
-    </header>
+    <!-- 
+
+    </header> -->
     <main>
-        <section class="section">
+        <section>
 
             <h1 class="title">My calculator</h1>
+
+        </section>
+        <section class="main">
+            <div class="theme">
+                <p class="theme-title">Change theme</p>
+                <div class="theme-switcher">
+                    <button class="theme-btn">Камень</button>
+                    <button class="theme-btn">Барби</button>
+                    <button class="theme-btn">Бежевый</button>
+                    <button class="theme-btn">Индиго</button>
+                </div>
+            </div>
             <div class="calc">
                 <div class="screen"></div>
                 <div class="buttons">
@@ -60,8 +56,18 @@
                     <span class="button operator math">=</span>
                 </div>
             </div>
+            <div class="theme">
+                <p class="theme-title">Change music</p>
+                <div class="theme-switcher">
+                    <button type="button" class="theme-btn">Релакс</button>
+                    <button type="button" class="theme-btn">Поп</button>
+                    <button type="button" class="theme-btn">Классика</button>
+                    <button type="button" class="theme-btn">Медитация</button>
+                </div>
+            </div>
         </section>
     </main>
+    <script src="calc.js"></script>
 </body>
 
 </html>
